# aniso_brem

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  compex  pyproject.toml
.github/workflows/: ci.yml
examples/: eeba_eebls_example.py  eerel_cs_example.py
fortran/: cseqs.f95  flux.f95  flux_aniso.f95
src/aniso_brem/: __init__.py
tests/: table_ref_haug98.py  test_eebapx.py  test_eebls.py  test_flux_iso_aniso_validation.py  test_smoke.py
